@@ -19,12 +19,11 @@ local flat = [[Interface\AddOns\ElvUI_MerathilisUI\media\textures\Flat]]
 if E.db.mui.installed == nil then return; end
 
 local ChangeLog = CreateFrame("frame")
-local ChangeLogData = [=[|cffff7d0av2.21|r, 25.10.2016
+local ChangeLogData = [=[|cffff7d0av2.22|r, 26.10.2016
 
 |cffff7d0aChanges:|r
- |cffff7d0a•|r Add back GroupInfo Frame. It's now movable via mover if you are in a Raid/Group.
- |cffff7d0a•|r Remove settings from ElvUI that are no longer exist.
-
+ |cffff7d0a•|r Fix a nil error in locPanel if entering an instance.
+ 
 |cffff7d0aNotes:|r
  |cffff7d0a•|r For Patch 7.1
 ]=];
