@@ -1,3 +1,6 @@
+<b><u> v2.22, 26.10.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Fix a nil error in locPanel if entering an instance.
+
 <b><u> v2.21, 25.10.2016</b></u>
 <font color=#FF8C00>&#9830;</font> FOR PATCH 7.1
 <font color=#FF8C00>&#9830;</font> Add back GroupInfo Frame. It's now movable via mover if you are in a Raid/Group.
